--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf8-turkish-ci">
     <title>Kaanans Recipes</title>
 </head>
 
