typo for a bit of everything and added pic for haydari

--- a/recipes/haydari.html
+++ b/recipes/haydari.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turkish Haydari | Based Cooking </title>
+    <title>Turkish Haydari <!--| Based Cooking --> </title>
 </head>
 <body>
+    
     <h1>Haydari (Turkish Yogurt Dip)</h1>
+    <img src="haydari-pic.jpg" alt="picture of Haydari">
     
     <p>Haydari is an easy and fast prepared yogurt-based appetizer, which is also economical.Goes well 
         with almost anything -traditionally- goes well with aniseed-flavored spirits (ouzo-raki) or kebab 
