--- a/recipes/turksih-lentil-soup.html
+++ b/recipes/turksih-lentil-soup.html
@@ -41,7 +41,8 @@
                  (but it's okay if you don't add it)</li>
             <li>After thoroughly roasting, 
                 add cold water (broth if available, otherwise it's okay, but we never add bouillon)</li>
-            <li>After boiling our lentils in the pot, soup is done but you can use a blender.</li>
+            <li>After boiling our lentils in the pot, soup is ready to serve but you can use 
+                a blender before servings.</li>
    
    
             </ol>
