--- a/recipes/turksih-lentil-soup.html
+++ b/recipes/turksih-lentil-soup.html
@@ -42,7 +42,7 @@
             <li>After thoroughly roasting, 
                 add cold water (broth if available, otherwise it's okay, but we never add bouillon)</li>
             <li>After boiling our lentils in the pot, soup is ready to serve but you can use 
-                a blender before servings.</li>
+                a blender before servings to make it more homogeneous.</li>
    
    
             </ol>
