add sub-sites to index.html
didn't know that ./ is neccessary to point out parent folder maybe linux takes default folder as it is own home folder, idk.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
 </head>
 
 <body>
-    <h1>Odin Recipess</h1>
+    <h1>Odin Recipes</h1>
 
+    
+    <h2>Wellcome to Tau-inertia's Recipes</h2>
+        <ul>
+            <li><a href="./recipes/haydari.html">Haydari Recipe</a> </li>
+            <li> <a href="./recipes/turksih-lentil-soup.html"> Turkish Lentil Soup   </a></li>
 </body>
 
 </html>
