--- a/recipes/haydari.html
+++ b/recipes/haydari.html
@@ -8,7 +8,7 @@
 <body>
     
     <h1>Haydari (Turkish Yogurt Dip)</h1>
-    <img src="haydari-pic.jpg" alt="picture of Haydari">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fe/Meze_ve_kat%C4%B1kl%C4%B1_ekmek.jpg/800px-Meze_ve_kat%C4%B1kl%C4%B1_ekmek.jpg?1653245073382" alt="picture of Haydari">
     
     <p>Haydari is an easy and fast prepared yogurt-based appetizer, which is also economical.Goes well 
         with almost anything -traditionally- goes well with aniseed-flavored spirits (ouzo-raki) or kebab 
