add pic for turkish coffe
it is royalty free sourced from this:https://cdn.pixabay.com/photo/2019/06/14/09/27/coffee-time-4273202_960_720.jpg

--- a/recipes/turkish-coffe.html
+++ b/recipes/turkish-coffe.html
@@ -6,6 +6,8 @@
     <title>Turkish Coffe <!--| Based Cooking --> </title>
 </head>
 <body>
+    <img src="https://cdn.pixabay.com/photo/2019/06/14/09/27/coffee-time-4273202_960_720.jpg" alt="2 cups of Turkish coffe">
+
     <p>Turkish coffee - the traditional way using a cezve 
         or ibrik (coffee pot). Authentic and delicious - 
         once the preserve of the Ottoman lands - 
@@ -36,7 +38,7 @@
         <h1>Directions</h1>
             <ol>
                 <li>Fill the metal pot with three of these cups of water (use your cups as scope)</li>
-                <li>add 3 tea spoons of sugar -one for each person- </li>
+                <li>Add 3 tea spoons of sugar -one for each person- </li>
                 <li> Let the sugar sink to the bottom without stirring</li>
                 <li>As it heats, the sugar will caramelise 
                     and disperse through the water, which will give it a very palatable taste.</li>
