--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1>Odin Recipes</h1>
 
     
-    <h2>Wellcome to Tau-inertia's Recipes</h2>
+    <h2>Welcome to Tau-inertia's Recipes</h2>
         <ul>
-            <li><a href="./recipes/haydari.html">Haydari Recipe</a> </li>
+            <li> <a href="./recipes/haydari.html">Haydari Recipe</a> </li>
             <li> <a href="./recipes/turksih-lentil-soup.html"> Turkish Lentil Soup   </a></li>
+            <li> <a href="./recipes/turkish-coffe.html">Turkish Coffe</a></li>
 </body>
 
 </html>
