--- a/recipes/turksih-lentil-soup.html
+++ b/recipes/turksih-lentil-soup.html
@@ -7,8 +7,9 @@
 </head>
 <body>
     <h1>Turksih Lentil Soup</h1>
+    <img src="https://cdn.pixabay.com/photo/2021/04/21/16/48/soup-6196901_960_720.jpg" alt="Lentil soup">
 <p>A very well know traditional Turkish soup, nice and easy to make and you can cook it 
-    till there is enough water in the pot.
+    till there is enough water in the pot.(more it cooked more it taste better)
 </p>
 
     
